<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:rsb="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        xmlns:android="http://schemas.android.com/apk/res/android"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reset"
            android:layout_gravity="right"
            android:layout_marginRight="15dp"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:id="@+id/reset"/>

        </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card1"
        style="@style/CardViewStyle"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="15dp"
            android:paddingLeft="15dp"
            android:paddingBottom="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_type"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/both"
                        android:layout_marginRight="25dp"
                        android:buttonTint="@color/colorPrimary"
                        android:checked="true"
                        />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/veg"
                        android:layout_marginRight="25dp"
                        android:buttonTint="@color/colorPrimary"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/non_veg"
                        android:buttonTint="@color/colorPrimary"/>

            </RadioGroup>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card2"
        android:layout_below="@+id/card1"
        style="@style/CardViewStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="15dp"
            android:paddingLeft="15dp"
            android:paddingBottom="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_sort"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hightolow"
                    android:layout_marginRight="25dp"
                    android:buttonTint="@color/colorPrimary"
                    android:checked="true"
                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lowtohigh"
                    android:layout_marginRight="25dp"
                    android:buttonTint="@color/colorPrimary"/>

            </RadioGroup>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card2"
        style="@style/CardViewStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="15dp"
            android:paddingLeft="15dp"
            android:paddingBottom="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_range"
                android:textStyle="bold"
                />


            <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
                android:id="@+id/rangeSeekbar1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:left_thumb_color="@color/colorPrimary"
                app:right_thumb_color="@color/colorPrimary"
                app:left_thumb_color_pressed="@color/colorPrimaryDark"
                app:right_thumb_color_pressed="@color/colorPrimaryDark"
                app:bar_color="@color/light_gray"
                app:bar_highlight_color="@color/colorPrimaryDark"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:minHeight="5dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="100"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/min"
                android:layout_weight="50"
                android:id="@+id/textMin1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/max"
                android:layout_weight="50"
                android:gravity="right"
                android:id="@+id/textMax1"/>

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center"
        android:layout_marginLeft="-20dp"
        android:layout_marginRight="-20dp"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply_f"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"/>

    </LinearLayout>

</RelativeLayout>