<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:background="@color/white"
        android:layout_alignParentBottom="true"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Name"
            android:layout_marginTop="32dp"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:backgroundTint="@color/light_gray"
            android:textStyle="bold"
            android:textSize="14dp"
            android:paddingBottom="20dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emaill"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:backgroundTint="@color/light_gray"
            android:textStyle="bold"
            android:textSize="14dp"
            android:layout_marginTop="25dp"
            android:paddingBottom="20dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_message"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:backgroundTint="@color/light_gray"
            android:textStyle="bold"
            android:textSize="14dp"
            android:layout_marginTop="25dp"
            android:paddingBottom="20dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorAccent"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_marginTop="55dp"/>

    </LinearLayout>



</RelativeLayout>