<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout1"
        android:background="@color/colorAccent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="15dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_total"
            android:id="@+id/subtotal_text"
            android:layout_marginBottom="8dp"
            android:textSize="@dimen/textsize"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_free"
            android:id="@+id/service_text"
            android:layout_below="@+id/subtotal_text"
            android:layout_marginBottom="8dp"
            android:textSize="@dimen/textsize"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery_charge"
            android:layout_below="@id/service_text"
            android:id="@+id/delivery_text"
            android:layout_marginBottom="15dp"
            android:textSize="@dimen/textsize"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/promocode"
            android:layout_below="@+id/delivery_text"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorPrimary"
            android:textSize="12dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="27.96$"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/textsize"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1.09$"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/subtotal_text"
            android:textSize="@dimen/textsize"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.50$"
            android:layout_below="@+id/service_text"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/textsize"/>

    </RelativeLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@color/colorPrimary"
    android:weightSum="100"
    android:id="@+id/layout1">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="50"
        >


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/proceed"
            android:textColor="@color/colorAccent"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="50"
        android:gravity="right"
        android:id="@+id/button_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Pay"
            android:textColor="@color/colorAccent"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="27.98 $"
            android:textColor="@color/yellow"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5dp"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            app:srcCompat="@drawable/ic_keyboard_arrow_right_white_24dp"
            android:layout_marginRight="5dp"/>

    </LinearLayout>


</LinearLayout>



</RelativeLayout>