<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/foodudelogo" />

    <TextView
        android:id="@+id/sign_in_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="30dp"
        android:text="@string/sign_in"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="45dp"
        android:text="@string/sign_up"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="gone" />


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_in_text"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/ic_email_grey_24dp"
        android:drawablePadding="15dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingBottom="25dp"
        android:paddingLeft="15dp"
        android:paddingTop="25dp"
        android:textColor="@color/black"
        android:textSize="10sp" />

    <EditText
        android:id="@+id/full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/email"
        android:layout_marginBottom="0.1dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/ic_email_grey_24dp"
        android:drawablePadding="15dp"
        android:hint="@string/full_name"
        android:inputType="textEmailAddress"
        android:paddingBottom="25dp"
        android:paddingLeft="15dp"
        android:paddingTop="25dp"
        android:textColor="@color/black"
        android:textSize="10sp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="0.1dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/ic_lock_grey_24dp"
        android:drawablePadding="15dp"
        android:drawableRight="@drawable/ic_remove_red_eye_grey_24dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingBottom="25dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="25dp"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/password"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:background="@color/colorAccent"
        android:gravity="right"
        android:paddingBottom="5dp"
        android:paddingRight="10dp"
        android:text="@string/Forgot"
        android:textSize="10sp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_user"
                android:textColor="@color/colorAccent"
                android:textSize="9sp" />

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/colorAccent"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="50"
            android:background="@color/colorPrimary"
            android:minHeight="35dp"
            android:text="@string/sign_in"
            android:textColor="@color/colorAccent"

            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:weightSum="100">


        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="50"
            android:background="@color/colorPrimary"
            android:minHeight="35dp"
            android:text="@string/sign_up"
            android:textColor="@color/colorAccent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center_vertical"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/already_reg"
                android:textColor="@color/colorAccent"
                android:textSize="9sp" />

            <TextView
                android:id="@+id/sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/sign_in"
                android:textColor="@color/colorAccent"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="65dp"
        android:weightSum="100">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:text="@string/sign_in_with"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/t_icon"
            android:src="@drawable/fb_icon" />

        <ImageView
            android:id="@+id/t_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/g_icon"
            android:src="@drawable/twitter_icon" />

        <ImageView
            android:id="@+id/g_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/g_icon" />

    </RelativeLayout>

</RelativeLayout>