<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        map:zoom="10.0"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/colorAccent"
        android:paddingTop="40dp"
        android:layout_marginBottom="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_location_on_green_24dp"
            android:id="@+id/location_icon1"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/head_office"
            android:id="@+id/head_office_text"
            android:layout_toRightOf="@+id/location_icon1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="225, Chris Tower E Smallsys INC 795 Dragram,Tuscon AZ-85705,USA"
            android:layout_toRightOf="@+id/location_icon1"
            android:layout_below="@+id/location_icon1"
            android:id="@+id/address_head"
            android:layout_marginLeft="10dp"
            android:textSize="12dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_location_on_grey_24dp"
            android:layout_below="@+id/address_head"
            android:id="@+id/location_icon2"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant"
            android:layout_below="@+id/address_head"
            android:layout_toRightOf="@+id/location_icon2"
            android:layout_marginTop="23dp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1014,1612 Dexter Street FORT WAYNE IN 46805, USA"
            android:layout_below="@+id/location_icon2"
            android:layout_toRightOf="@+id/location_icon2"
            android:id="@+id/address_rest"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="5dp"
            android:textSize="12dp"
            android:layout_marginRight="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_below="@+id/address_rest"
            android:gravity="center"
            android:layout_marginLeft="-20dp"
            android:layout_marginRight="-20dp"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_us"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"/>

        </LinearLayout>

    </RelativeLayout>


</FrameLayout>